--- a/Project_glm/Modeling.ipynb
+++ b/Project_glm/Modeling.ipynb
@@ -1509,157 +1509,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "id": "3c2e6e85-67b7-4154-987d-8acc7d8c0b93",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table class=\"simpletable\">\n",
-       "<caption>Generalized Linear Model Regression Results</caption>\n",
-       "<tr>\n",
-       "  <th>Dep. Variable:</th>         <td>Cheb</td>       <th>  No. Observations:  </th>  <td> 29897</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Model:</th>                  <td>GLM</td>       <th>  Df Residuals:      </th>  <td> 29876</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Model Family:</th>         <td>Poisson</td>     <th>  Df Model:          </th>  <td>    20</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Link Function:</th>          <td>log</td>       <th>  Scale:             </th> <td>  1.0000</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Method:</th>                <td>IRLS</td>       <th>  Log-Likelihood:    </th> <td> -61223.</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Date:</th>            <td>Sat, 10 Jul 2021</td> <th>  Deviance:          </th> <td>  27173.</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Time:</th>                <td>09:57:40</td>     <th>  Pearson chi2:      </th> <td>2.67e+04</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>No. Iterations:</th>          <td>5</td>        <th>                     </th>     <td> </td>   \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Covariance Type:</th>     <td>nonrobust</td>    <th>                     </th>     <td> </td>   \n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<tr>\n",
-       "                  <td></td>                     <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Intercept</th>                         <td>    1.5274</td> <td>    0.027</td> <td>   55.861</td> <td> 0.000</td> <td>    1.474</td> <td>    1.581</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Region[T.North East]</th>              <td>    0.1939</td> <td>    0.010</td> <td>   18.674</td> <td> 0.000</td> <td>    0.174</td> <td>    0.214</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Region[T.North West]</th>              <td>    0.1935</td> <td>    0.010</td> <td>   18.784</td> <td> 0.000</td> <td>    0.173</td> <td>    0.214</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Region[T.South East]</th>              <td>    0.1559</td> <td>    0.013</td> <td>   11.789</td> <td> 0.000</td> <td>    0.130</td> <td>    0.182</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Region[T.South South]</th>             <td>    0.1078</td> <td>    0.012</td> <td>    8.761</td> <td> 0.000</td> <td>    0.084</td> <td>    0.132</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Region[T.South West]</th>              <td>   -0.0027</td> <td>    0.012</td> <td>   -0.226</td> <td> 0.821</td> <td>   -0.026</td> <td>    0.021</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Pregnant[T.Yes]</th>                   <td>   -0.1292</td> <td>    0.008</td> <td>  -15.456</td> <td> 0.000</td> <td>   -0.146</td> <td>   -0.113</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Religion[T.Muslim/Islam]</th>          <td>    0.0162</td> <td>    0.009</td> <td>    1.782</td> <td> 0.075</td> <td>   -0.002</td> <td>    0.034</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Pregterm[T.Yes]</th>                   <td>    0.0647</td> <td>    0.009</td> <td>    7.513</td> <td> 0.000</td> <td>    0.048</td> <td>    0.082</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Curwor[T.Yes]</th>                     <td>    0.0009</td> <td>    0.019</td> <td>    0.049</td> <td> 0.961</td> <td>   -0.036</td> <td>    0.038</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Woc[T.Professional worker/Others]</th> <td>    0.1762</td> <td>    0.020</td> <td>    8.892</td> <td> 0.000</td> <td>    0.137</td> <td>    0.215</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Woc[T.Sales worker]</th>               <td>    0.1377</td> <td>    0.020</td> <td>    6.920</td> <td> 0.000</td> <td>    0.099</td> <td>    0.177</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Fp[T.No more/Others]</th>              <td>    0.4088</td> <td>    0.006</td> <td>   65.357</td> <td> 0.000</td> <td>    0.396</td> <td>    0.421</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Childdesire[T.Wanted then]</th>        <td>   -0.0274</td> <td>    0.010</td> <td>   -2.630</td> <td> 0.009</td> <td>   -0.048</td> <td>   -0.007</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Kidalive[T.Yes]</th>                   <td>   -0.0825</td> <td>    0.009</td> <td>   -8.923</td> <td> 0.000</td> <td>   -0.101</td> <td>   -0.064</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Kidtwin[T.Single birth]</th>           <td>   -0.2001</td> <td>    0.013</td> <td>  -14.943</td> <td> 0.000</td> <td>   -0.226</td> <td>   -0.174</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Education[T.Primary]</th>              <td>   -0.0541</td> <td>    0.008</td> <td>   -6.698</td> <td> 0.000</td> <td>   -0.070</td> <td>   -0.038</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Education[T.Secondary/Higher]</th>     <td>   -0.2590</td> <td>    0.009</td> <td>  -29.065</td> <td> 0.000</td> <td>   -0.276</td> <td>   -0.242</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Hhha</th>                              <td>    0.0132</td> <td>    0.000</td> <td>   58.487</td> <td> 0.000</td> <td>    0.013</td> <td>    0.014</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Age1stmar</th>                         <td>   -0.0026</td> <td>    0.001</td> <td>   -2.127</td> <td> 0.033</td> <td>   -0.005</td> <td>   -0.000</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Age1stbirth</th>                       <td>   -0.0289</td> <td>    0.001</td> <td>  -25.006</td> <td> 0.000</td> <td>   -0.031</td> <td>   -0.027</td>\n",
-       "</tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<class 'statsmodels.iolib.summary.Summary'>\n",
-       "\"\"\"\n",
-       "                 Generalized Linear Model Regression Results                  \n",
-       "==============================================================================\n",
-       "Dep. Variable:                   Cheb   No. Observations:                29897\n",
-       "Model:                            GLM   Df Residuals:                    29876\n",
-       "Model Family:                 Poisson   Df Model:                           20\n",
-       "Link Function:                    log   Scale:                          1.0000\n",
-       "Method:                          IRLS   Log-Likelihood:                -61223.\n",
-       "Date:                Sat, 10 Jul 2021   Deviance:                       27173.\n",
-       "Time:                        09:57:40   Pearson chi2:                 2.67e+04\n",
-       "No. Iterations:                     5                                         \n",
-       "Covariance Type:            nonrobust                                         \n",
-       "=====================================================================================================\n",
-       "                                        coef    std err          z      P>|z|      [0.025      0.975]\n",
-       "-----------------------------------------------------------------------------------------------------\n",
-       "Intercept                             1.5274      0.027     55.861      0.000       1.474       1.581\n",
-       "Region[T.North East]                  0.1939      0.010     18.674      0.000       0.174       0.214\n",
-       "Region[T.North West]                  0.1935      0.010     18.784      0.000       0.173       0.214\n",
-       "Region[T.South East]                  0.1559      0.013     11.789      0.000       0.130       0.182\n",
-       "Region[T.South South]                 0.1078      0.012      8.761      0.000       0.084       0.132\n",
-       "Region[T.South West]                 -0.0027      0.012     -0.226      0.821      -0.026       0.021\n",
-       "Pregnant[T.Yes]                      -0.1292      0.008    -15.456      0.000      -0.146      -0.113\n",
-       "Religion[T.Muslim/Islam]              0.0162      0.009      1.782      0.075      -0.002       0.034\n",
-       "Pregterm[T.Yes]                       0.0647      0.009      7.513      0.000       0.048       0.082\n",
-       "Curwor[T.Yes]                         0.0009      0.019      0.049      0.961      -0.036       0.038\n",
-       "Woc[T.Professional worker/Others]     0.1762      0.020      8.892      0.000       0.137       0.215\n",
-       "Woc[T.Sales worker]                   0.1377      0.020      6.920      0.000       0.099       0.177\n",
-       "Fp[T.No more/Others]                  0.4088      0.006     65.357      0.000       0.396       0.421\n",
-       "Childdesire[T.Wanted then]           -0.0274      0.010     -2.630      0.009      -0.048      -0.007\n",
-       "Kidalive[T.Yes]                      -0.0825      0.009     -8.923      0.000      -0.101      -0.064\n",
-       "Kidtwin[T.Single birth]              -0.2001      0.013    -14.943      0.000      -0.226      -0.174\n",
-       "Education[T.Primary]                 -0.0541      0.008     -6.698      0.000      -0.070      -0.038\n",
-       "Education[T.Secondary/Higher]        -0.2590      0.009    -29.065      0.000      -0.276      -0.242\n",
-       "Hhha                                  0.0132      0.000     58.487      0.000       0.013       0.014\n",
-       "Age1stmar                            -0.0026      0.001     -2.127      0.033      -0.005      -0.000\n",
-       "Age1stbirth                          -0.0289      0.001    -25.006      0.000      -0.031      -0.027\n",
-       "=====================================================================================================\n",
-       "\"\"\""
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Generalized Linear Model Regression Results                  \n",
+      "==============================================================================\n",
+      "Dep. Variable:                   Cheb   No. Observations:                29897\n",
+      "Model:                            GLM   Df Residuals:                    29876\n",
+      "Model Family:                 Poisson   Df Model:                           20\n",
+      "Link Function:                    log   Scale:                          1.0000\n",
+      "Method:                          IRLS   Log-Likelihood:                -61223.\n",
+      "Date:                Sat, 10 Jul 2021   Deviance:                       27173.\n",
+      "Time:                        11:25:02   Pearson chi2:                 2.67e+04\n",
+      "No. Iterations:                     5                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "=====================================================================================================\n",
+      "                                        coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------------------------\n",
+      "Intercept                             1.5274      0.027     55.861      0.000       1.474       1.581\n",
+      "Region[T.North East]                  0.1939      0.010     18.674      0.000       0.174       0.214\n",
+      "Region[T.North West]                  0.1935      0.010     18.784      0.000       0.173       0.214\n",
+      "Region[T.South East]                  0.1559      0.013     11.789      0.000       0.130       0.182\n",
+      "Region[T.South South]                 0.1078      0.012      8.761      0.000       0.084       0.132\n",
+      "Region[T.South West]                 -0.0027      0.012     -0.226      0.821      -0.026       0.021\n",
+      "Pregnant[T.Yes]                      -0.1292      0.008    -15.456      0.000      -0.146      -0.113\n",
+      "Religion[T.Muslim/Islam]              0.0162      0.009      1.782      0.075      -0.002       0.034\n",
+      "Pregterm[T.Yes]                       0.0647      0.009      7.513      0.000       0.048       0.082\n",
+      "Curwor[T.Yes]                         0.0009      0.019      0.049      0.961      -0.036       0.038\n",
+      "Woc[T.Professional worker/Others]     0.1762      0.020      8.892      0.000       0.137       0.215\n",
+      "Woc[T.Sales worker]                   0.1377      0.020      6.920      0.000       0.099       0.177\n",
+      "Fp[T.No more/Others]                  0.4088      0.006     65.357      0.000       0.396       0.421\n",
+      "Childdesire[T.Wanted then]           -0.0274      0.010     -2.630      0.009      -0.048      -0.007\n",
+      "Kidalive[T.Yes]                      -0.0825      0.009     -8.923      0.000      -0.101      -0.064\n",
+      "Kidtwin[T.Single birth]              -0.2001      0.013    -14.943      0.000      -0.226      -0.174\n",
+      "Education[T.Primary]                 -0.0541      0.008     -6.698      0.000      -0.070      -0.038\n",
+      "Education[T.Secondary/Higher]        -0.2590      0.009    -29.065      0.000      -0.276      -0.242\n",
+      "Hhha                                  0.0132      0.000     58.487      0.000       0.013       0.014\n",
+      "Age1stmar                            -0.0026      0.001     -2.127      0.033      -0.005      -0.000\n",
+      "Age1stbirth                          -0.0289      0.001    -25.006      0.000      -0.031      -0.027\n",
+      "=====================================================================================================\n"
+     ]
     }
    ],
    "source": [
@@ -1667,7 +1561,7 @@
     "formula_0 = models.model[0]\n",
     "model_0 = smf.glm(formula=formula_0, data=df, family=sm.families.Poisson())\n",
     "model_0 = model_0.fit()\n",
-    "model_0.summary()"
+    "print(model_0.summary())"
    ]
   },
   {
@@ -1741,7 +1635,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "721b6bf4-57e8-4ca4-9396-e7f7662828a7",
+   "id": "8ad3c264-ee39-4cab-8032-b5d584e64785",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "736d26e8-7972-4ddb-aa86-7a78227b2a40",
    "metadata": {},
    "outputs": [],
    "source": []
