--- a/Project_glm/Modeling.ipynb
+++ b/Project_glm/Modeling.ipynb
@@ -1762,6 +1762,7 @@
     }
    ],
    "source": [
+    "# Diagnostics NegativeBinomial\n",
     "model_norm_residuals = ngb_model.get_influence().resid_studentized\n",
     "QQ = ProbPlot(model_norm_residuals)\n",
     "plot_lm_2 = QQ.qqplot(line='45', alpha=0.5, color='#4C72B0', lw=1)\n",
