--- a/Project_glm/Modeling.ipynb
+++ b/Project_glm/Modeling.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# Modelling fertility levels in Nigeria using Generalized Poisson regression-based approach \n",
     "Link paper: https://www.sciencedirect.com/science/article/pii/S2468227620302325 <br>\n",
-    "Link data: https://github.com/thanhcong1321/Project_GLM/tree/main/Project_glm/data"
+    "Link data: https://github.com/thanhcong1321/Project_GLM/tree/main/Project_glm/data <br>\n",
+    "Source code: https://github.com/thanhcong1321/Project_GLM/blob/main/Project_glm/Modeling.ipynb"
    ]
   },
   {
@@ -992,85 +993,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "b902cafc-10d4-4592-9592-63ca44fe0fc3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<statsmodels.genmod.generalized_linear_model.GLMResultsWrapper at 0x1921eaf03a0>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fml = 'Cheb ~ Urban + Region + Religion + Hhha + Age1stmar + Pregterm + Age1stbirth + Curwor + Woc + Fp + Childdesire + Kidsex + Kidalive + Kidtwin + Education'\n",
-    "\n",
-    "model = smf.glm(formula = fml, data=df, family=sm.families.Poisson())\n",
-    "result = model.fit()\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "2b724fcb-c960-45d0-ae8d-9801d44c449d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                 Generalized Linear Model Regression Results                  \n",
-      "==============================================================================\n",
-      "Dep. Variable:                   Cheb   No. Observations:                29897\n",
-      "Model:                            GLM   Df Residuals:                    29875\n",
-      "Model Family:                 Poisson   Df Model:                           21\n",
-      "Link Function:                    log   Scale:                          1.0000\n",
-      "Method:                          IRLS   Log-Likelihood:                -61345.\n",
-      "Date:                Sat, 10 Jul 2021   Deviance:                       27417.\n",
-      "Time:                        00:46:10   Pearson chi2:                 2.69e+04\n",
-      "No. Iterations:                     5                                         \n",
-      "Covariance Type:            nonrobust                                         \n",
-      "=====================================================================================================\n",
-      "                                        coef    std err          z      P>|z|      [0.025      0.975]\n",
-      "-----------------------------------------------------------------------------------------------------\n",
-      "Intercept                             1.4980      0.027     54.519      0.000       1.444       1.552\n",
-      "Urban[T.Urban]                       -0.0055      0.007     -0.803      0.422      -0.019       0.008\n",
-      "Region[T.North East]                  0.1912      0.010     18.408      0.000       0.171       0.212\n",
-      "Region[T.North West]                  0.1908      0.010     18.522      0.000       0.171       0.211\n",
-      "Region[T.South East]                  0.1536      0.013     11.439      0.000       0.127       0.180\n",
-      "Region[T.South South]                 0.1066      0.012      8.660      0.000       0.082       0.131\n",
-      "Region[T.South West]                 -0.0020      0.012     -0.164      0.870      -0.026       0.022\n",
-      "Religion[T.Muslim/Islam]              0.0163      0.009      1.774      0.076      -0.002       0.034\n",
-      "Pregterm[T.Yes]                       0.0613      0.009      7.121      0.000       0.044       0.078\n",
-      "Curwor[T.Yes]                         0.0027      0.019      0.141      0.888      -0.035       0.040\n",
-      "Woc[T.Professional worker/Others]     0.1772      0.020      8.938      0.000       0.138       0.216\n",
-      "Woc[T.Sales worker]                   0.1377      0.020      6.921      0.000       0.099       0.177\n",
-      "Fp[T.No more/Others]                  0.4108      0.006     65.656      0.000       0.398       0.423\n",
-      "Childdesire[T.Wanted then]           -0.0289      0.010     -2.770      0.006      -0.049      -0.008\n",
-      "Kidsex[T.Male]                        0.0074      0.006      1.339      0.181      -0.003       0.018\n",
-      "Kidalive[T.Yes]                      -0.0761      0.009     -8.228      0.000      -0.094      -0.058\n",
-      "Kidtwin[T.Single birth]              -0.2071      0.013    -15.471      0.000      -0.233      -0.181\n",
-      "Education[T.Primary]                 -0.0538      0.008     -6.605      0.000      -0.070      -0.038\n",
-      "Education[T.Secondary/Higher]        -0.2574      0.009    -28.089      0.000      -0.275      -0.239\n",
-      "Hhha                                  0.0134      0.000     59.485      0.000       0.013       0.014\n",
-      "Age1stmar                            -0.0024      0.001     -1.978      0.048      -0.005   -2.18e-05\n",
-      "Age1stbirth                          -0.0289      0.001    -25.004      0.000      -0.031      -0.027\n",
-      "=====================================================================================================\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(result.summary())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ce970456-94cf-4419-9e2f-9bf15474ab39",
    "metadata": {},
@@ -1407,6 +1329,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 88,
+   "id": "9c3051e8-973f-4739-b76d-94bfb8701af3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Cheb ~ Region + Pregnant + Religion + Hhha + Age1stmar + Pregterm + Age1stbirth + Curwor + Woc + Fp + Childdesire + Kidalive + Kidtwin + Education'"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models.model[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 41,
    "id": "a44c2d92-61c9-4704-ba21-0343443d22be",
    "metadata": {},
@@ -1725,7 +1668,7 @@
     }
    ],
    "source": [
-    "# NegativeBinomial with formula: 'Cheb ~ Region + Pregnant + Religion + Hhha + Age1stmar + Pregterm + Age1stbirth + Curwor + Woc + Fp + Childdesire + Kidalive + Kidtwin + Education'\n",
+    "# NegativeBinomial with formula: ''Cheb ~ Region + Pregnant + Religion + Hhha + Age1stmar + Pregterm + Age1stbirth + Curwor + Woc + Fp + Childdesire + Kidalive + Kidtwin + Education'\n",
     "ngb_model = smf.glm(formula=formula_0, data=df, family=sm.families.NegativeBinomial())\n",
     "ngb_model = ngb_model.fit()\n",
     "print(ngb_model.summary())\n",
